code/compiler/test/analysis/diagnostics_input_tests/global_access3.c.diag
Error: [Basic] Invalid write access to global memory location
                from: "bar" (<input_filepath>@17:5)
                from: "main"
<input_filepath>@7:5-7:9
    x = 5;
    ^~~~~
Error: [Basic] Invalid read access to global memory location
                from: "baz" (<input_filepath>@18:12)
                from: "main"
<input_filepath>@12:12
    return x + 1;
           ^
